[package]
name = "cloud-stash"
version = "0.1.0"
authors = ["Kitsu <mail@kitsu.me>"]

[dependencies]
docopt = "0.8"
serde = "1.0"
serde_derive = "1.0"
sqlite = "0.23.9"
sha3 = "*"
reqwest = "0.8.6"
serde_json = "1.0"
hyper = "0.11.27"
netfuse = { git = "https://github.com/l4l/netfuse", branch = "readdir_owned" }
libc = "0.2.12"
fuse = "0.2.7"
time = "*"

[dev-dependencies]
rand = "*"
